<resources>
    <string name="app_name" translatable="false">Wacana</string>
    <string name="title_activity_new_trip">Add New Trip</string>
    <string name="new_trip_destination">Destination</string>
    <string name="new_trip_start_date">Start Date</string>
    <string name="common_dash" translatable="false">—</string>
    <string name="new_trip_end_date">End Date</string>
    <string name="new_trip_create_new_trip">Create trip</string>
    <string name="tab_baggage_title">baggage</string>
    <string name="tab_baggage_no_items_added">No items added</string>
    <string name="tab_baggage_add_item">Add item</string>
    <string name="tab_baggage_edit">edit</string>
    <string name="tab_baggage_save">save</string>
    <string name="tab_baggage_cancel">cancel</string>
    <string name="tab_document_title">document</string>
    <string name="tab_document_no_documents_added">No documents added</string>
    <string name="tab_document_add_document">Add document</string>
    <string name="trip_list_add_new_trip">Add New Trip</string>
    <string name="common_date_format_dd_mmm_yyyy" translatable="false">dd MMM yyyy</string>
    <string name="notification_title">Get ready for your trip to %1$s!</string>
    <string name="notification_title_alternative">Get ready for your trip!</string>
    <string name="notification_body">Start packing now</string>
</resources>
