<?xml version="1.0" encoding="utf-8"?>
<layout>

    <data>

        <variable
            name="viewModel"
            type="id.ac.ui.cs.mobileprogramming.anisha_inas.wacana.ui.newTrip.NewTripViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="16dp">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/input_layout_destination"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/new_trip_destination"
            app:hintEnabled="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_text_destination"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textShortMessage"
                android:maxLines="1"
                android:text="@={viewModel.destination}"
                android:textSize="14sp"
                tools:text="Italy, Switzerland, France, Germany, Netherland, Norway, United Kingdom" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/input_layout_start_date"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:hint="@string/new_trip_start_date"
            app:hintEnabled="true"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@id/text_view_date_separator"
            app:layout_constraintTop_toBottomOf="@+id/input_layout_destination">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_text_start_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="date"
                android:textAlignment="center"
                android:textSize="14sp"
                tools:text="September 10 2019" />
        </com.google.android.material.textfield.TextInputLayout>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/text_view_date_separator"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:text="@string/common_dash"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="@+id/input_layout_start_date"
            app:layout_constraintEnd_toStartOf="@+id/input_layout_end_date"
            app:layout_constraintStart_toEndOf="@+id/input_layout_start_date"
            app:layout_constraintTop_toTopOf="@+id/input_layout_start_date" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/input_layout_end_date"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:hint="@string/new_trip_end_date"
            app:hintEnabled="true"
            app:layout_constraintLeft_toRightOf="@id/text_view_date_separator"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/input_layout_destination">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_text_end_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="date"
                android:textAlignment="center"
                android:textSize="14sp"
                tools:text="September 17 2019" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_add_trip"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:backgroundTint="@color/colorSecondary"
            android:text="@string/new_trip_create_new_trip"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/input_layout_start_date" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>